--- a/man/keyctl_chown.3
+++ b/man/keyctl_chown.3
@@ -7,31 +7,43 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_CLEAR 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_CHOWN 3 "4 May 2006" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_clear \- Clear a keyring
+keyctl_chown \- Change the ownership of a key
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_clear(key_serial_t " keyring ");"
+.BI "long keyctl_chown(key_serial_t " key ", uid_t " uid ", gid_t " gid ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_clear ()
-clears the contents of a
-.IR keyring .
+.BR keyctl_chown ()
+changes the user and group ownership details of a key.
+.P
+A setting of
+.B -1
+on either
+.I uid
+or
+.I gid
+will cause that setting to be ignored.
+.P
+A process that does not have the
+.B SysAdmin
+capability may not change a key's UID or set the key's GID to a value that
+does not match the process's GID or one of its group list.
 .P
 The caller must have
-.B write
-permission on a keyring to be able clear it.
+.B setattr
+permission on a key to be able change its ownership.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_clear ()
+.BR keyctl_chown ()
 returns
-.BR 0 .
+.B 0 .
 On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
@@ -39,18 +51,21 @@ will be returned and errno will have been set to an appropriate error.
 .SH ERRORS
 .TP
 .B ENOKEY
-The keyring specified is invalid.
+The specified key does not exist.
 .TP
 .B EKEYEXPIRED
-The keyring specified has expired.
+The specified key has expired.
 .TP
 .B EKEYREVOKED
-The keyring specified had been revoked.
+The specified key has been revoked.
+.TP
+.B EDQUOT
+Changing the UID to the one specified would run that UID out of quota.
 .TP
 .B EACCES
-The keyring exists, but is not
-.B writable
-by the calling process.
+The key exists, but does not grant
+.B setattr
+permission to the calling process.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -70,4 +85,6 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR keyutils (7),
+.br
+.BR keyrings (7)
