--- a/man/keyctl_clear.3
+++ b/man/keyctl_clear.3
@@ -7,39 +7,29 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_UPDATE 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_CLEAR 3 "4 May 2006" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_update \- Update a key
+keyctl_clear \- Clear a keyring
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_update(key_serial_t " key ", const void *" payload ,
-.BI "size_t " plen ");"
+.BI "long keyctl_clear(key_serial_t " keyring ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_update ()
-updates the payload of a key if the key type permits it.
+.BR keyctl_clear ()
+clears the contents of a
+.IR keyring .
 .P
 The caller must have
 .B write
-permission on a key to be able update it.
-.P
-.I payload
-and
-.I plen
-specify the data for the new payload.
-.I payload
-may be NULL and
-.I plen
-may be zero if the key type permits that.  The key type may reject the data if
-it's in the wrong format or in some other way invalid.
+permission on a keyring to be able clear it.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_update ()
+.BR keyctl_clear ()
 returns
 .BR 0 .
 On error, the value
@@ -49,31 +39,18 @@ will be returned and errno will have been set to an appropriate error.
 .SH ERRORS
 .TP
 .B ENOKEY
-The key specified is invalid.
+The keyring specified is invalid.
 .TP
 .B EKEYEXPIRED
-The key specified has expired.
+The keyring specified has expired.
 .TP
 .B EKEYREVOKED
-The key specified had been revoked.
-.TP
-.B EINVAL
-The payload data was invalid.
-.TP
-.B ENOMEM
-Insufficient memory to store the new payload.
-.TP
-.B EDQUOT
-The key quota for this user would be exceeded by increasing the size of the
-key to accommodate the new payload.
+The keyring specified had been revoked.
 .TP
 .B EACCES
-The key exists, but is not
+The keyring exists, but is not
 .B writable
 by the calling process.
-.TP
-.B EOPNOTSUPP
-The key type does not support the update operation on its keys.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -93,4 +70,7 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR keyutils (7),
+.br
+.BR keyrings (7)
+
