--- a/man/keyctl_get_security.3
+++ b/man/keyctl_get_security.3
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (C) 2006 Red Hat, Inc. All Rights Reserved.
+.\" Copyright (C) 2010 Red Hat, Inc. All Rights Reserved.
 .\" Written by David Howells (dhowells@redhat.com)
 .\"
 .\" This program is free software; you can redistribute it and/or
@@ -7,56 +7,50 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_READ 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_GET_SECURITY 3 "26 Feb 2010" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_read \- Read a key
+keyctl_get_security \- Retrieve a key's security context
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_read(key_serial_t " key ", char *" buffer ,
-.BI "size_t" buflen ");"
+.BI "long keyctl_get_security(key_serial_t " key ", char *" buffer ,
+.BI "size_t " buflen ");"
 .sp
-.BI "long keyctl_read_alloc(key_serial_t " key ", void **" _buffer ");"
+.BI "long keyctl_get_security_alloc(key_serial_t " key ", char **" _buffer ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_read ()
-reads the payload of a key if the key type supports it.
+.BR keyctl_get_security ()
+retrieves the security context of a key as a NUL-terminated string.  This will
+be rendered in a form appropriate to the LSM in force - for instance, with
+SELinux, it may look like
+.IP
+.B "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023"
 .P
 The caller must have
-.B read
-permission on a key to be able to read it.
+.B view
+permission on a key to be able to get its security context.
 .P
 .I buffer
 and
 .I buflen
-specify the buffer into which the payload data will be placed.  If the buffer
-is too small, the full size of the payload will be returned, and no copy will
-take place.
+specify the buffer into which the string will be placed.  If the buffer is too
+small, the full size of the string will be returned, and no copy will take
+place.
 .P
-.BR keyctl_read_alloc ()
+.BR keyctl_get_security_alloc ()
 is similar to
-.BR keyctl_read ()
-except that it allocates a buffer big enough to hold the payload data and
-places the data in it.  If successful, A pointer to the buffer is placed in
+.BR keyctl_get_security ()
+except that it allocates a buffer big enough to hold the string and copies the
+string into it.  If successful, A pointer to the buffer is placed in
 .IR *_buffer .
 The caller must free the buffer.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
-.SH READING KEYRINGS
-This call can be used to list the contents of a keyring.  The data is
-presented to the user as an array of
-.B key_serial_t
-values, each of which corresponds to a key to which the keyring holds a link.
-.P
-The size of the keyring will be sizeof(key_serial_t) multiplied by the number
-of keys.  The size of key_serial_t is invariant across different word sizes,
-though the byte-ordering is as appropriate for the kernel.
-.\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_read ()
+.BR keyctl_get_security ()
 returns the amount of data placed into the buffer.  If the buffer was too
 small, then the size of buffer required will be returned, but no data will be
 transferred.  On error, the value
@@ -64,8 +58,8 @@ transferred.  On error, the value
 will be returned and errno will have been set to an appropriate error.
 .P
 On success
-.BR keyctl_read_alloc ()
-returns the amount of data in the buffer.  On error, the value
+.BR keyctl_get_security_alloc ()
+returns the amount of data in the buffer, less the NUL terminator.  On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
@@ -82,11 +76,8 @@ The key specified had been revoked.
 .TP
 .B EACCES
 The key exists, but is not
-.B readable
+.B viewable
 by the calling process.
-.TP
-.B EOPNOTSUPP
-The key type does not support reading of the payload data.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -106,4 +97,6 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR keyutils (7),
+.br
+.BR keyrings (7)
