--- a/man/keyctl_join_session_keyring.3
+++ b/man/keyctl_join_session_keyring.3
@@ -7,65 +7,59 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_CHOWN 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_JOIN_SESSION_KEYRING 3 "20 Feb 2014" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_chown \- Change the ownership of a key
+keyctl_join_session_keyring \- Join a different session keyring
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_chown(key_serial_t " key ", uid_t " uid ", gid_t " gid ");"
+.BI "key_serial_t keyctl_join_session_keyring(const char *" name ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_chown ()
-changes the user and group ownership details of a key.
+.BR keyctl_join_session_keyring ()
+changes the session keyring to which a process is subscribed.
 .P
-A setting of
-.B -1
-on either
-.I uid
-or
-.I gid
-will cause that setting to be ignored.
+If
+.I name
+is
+.B NULL
+then a new anonymous keyring will be created, and the process will be
+subscribed to that.
 .P
-A process that does not have the
-.B SysAdmin
-capability may not change a key's UID or set the key's GID to a value that
-does not match the process's GID or one of its group list.
+If
+.I name
+points to a string, then if a keyring of that name is available, the process
+will attempt to subscribe to that keyring, giving an error if that is not
+permitted; otherwise a new keyring of that name is created and attached as the
+session keyring.
 .P
-The caller must have
-.B setattr
-permission on a key to be able change its ownership.
+To attach to an extant named keyring, the keyring must have
+.B search
+permission available to the calling process.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_chown ()
-returns
-.B 0 .
-On error, the value
+.BR keyctl_join_session_keyring ()
+returns the serial number of the key it found or created.  On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH ERRORS
 .TP
-.B ENOKEY
-The specified key does not exist.
-.TP
-.B EKEYEXPIRED
-The specified key has expired.
-.TP
-.B EKEYREVOKED
-The specified key has been revoked.
+.B ENOMEM
+Insufficient memory to create a key.
 .TP
 .B EDQUOT
-Changing the UID to the one specified would run that UID out of quota.
+The key quota for this user would be exceeded by creating this key or linking
+it to the keyring.
 .TP
 .B EACCES
-The key exists, but does not grant
-.B setattr
-permission to the calling process.
+The named keyring exists, but is not
+.B searchable
+by the calling process.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -85,4 +79,10 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR session-keyring (7),
+.br
+.BR user-session-keyring (7),
+.br
+.BR keyutils (7),
+.br
+.BR keyrings (7)
