--- a/man/keyctl_session_to_parent.3
+++ b/man/keyctl_session_to_parent.3
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (C) 2006 Red Hat, Inc. All Rights Reserved.
+.\" Copyright (C) 2010 Red Hat, Inc. All Rights Reserved.
 .\" Written by David Howells (dhowells@redhat.com)
 .\"
 .\" This program is free software; you can redistribute it and/or
@@ -7,58 +7,52 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_SET_TIMEOUT 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_SESSION_TO_PARENT 3 "20 Feb 2014" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_set_timeout \- Set the expiration timer on a key
+keyctl_session_to_parent \- Set the parent process's session keyring
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_set_timeout(key_serial_t " key ", unsigned " timeout ");"
+.BI "long keyctl_session_to_parent();"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_set_timeout ()
-sets the expiration timer on a key to
-.I timeout
-seconds into the future.  Setting
-.I timeout
-to
-.B zero
-cancels the expiration, assuming the key hasn't already expired.
+.BR keyctl_session_to_parent ()
+changes the session keyring to which the calling process's parent subscribes
+to be the that of the calling process.
 .P
-When the key expires, further attempts to access it will be met with error
-.BR EKEYEXPIRED .
+The keyring must have
+.B link
+permission available to the calling process, the parent process must have the
+same UIDs/GIDs as the calling process, and the LSM must not reject the
+replacement.  Furthermore, this may not be used to affect init or a kernel
+thread.
 .P
-The caller must have
-.B setattr
-permission on a key to be able change its permissions mask.
+Note that the replacement will not take immediate effect upon the parent
+process, but will rather be deferred to the next time it returns to userspace
+from kernel space.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_set_timeout ()
-returns
-.B 0 .
-On error, the value
+.BR keyctl_session_to_parent ()
+returns 0.  On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH ERRORS
 .TP
-.B ENOKEY
-The specified key does not exist.
+.B ENOMEM
+Insufficient memory to create a key.
 .TP
-.B EKEYEXPIRED
-The specified key has already expired.
-.TP
-.B EKEYREVOKED
-The specified key has been revoked.
+.B EPERM
+The credentials of the parent don't match those of the caller.
 .TP
 .B EACCES
-The named key exists, but does not grant
-.B setattr
-permission to the calling process.
+The named keyring exists, but is not
+.B linkable
+by the calling process.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -78,4 +72,10 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR session-keyring (7),
+.br
+.BR user-session-keyring (7),
+.br
+.BR keyutils (7),
+.br
+.BR keyrings (7)
