--- a/man/keyctl_set_timeout.3
+++ b/man/keyctl_set_timeout.3
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (C) 2010 Red Hat, Inc. All Rights Reserved.
+.\" Copyright (C) 2006 Red Hat, Inc. All Rights Reserved.
 .\" Written by David Howells (dhowells@redhat.com)
 .\"
 .\" This program is free software; you can redistribute it and/or
@@ -7,52 +7,58 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_SESSION_TO_PARENT 3 "26 Jun 2010" Linux "Linux Key Management Calls"
+.TH KEYCTL_SET_TIMEOUT 3 "4 May 2006" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_session_to_parent \- Set the parent process's session keyring
+keyctl_set_timeout \- Set the expiration timer on a key
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "long keyctl_session_to_parent();"
+.BI "long keyctl_set_timeout(key_serial_t " key ", unsigned " timeout ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_session_to_parent ()
-changes the session keyring to which the calling process's parent subscribes
-to be the that of the calling process.
+.BR keyctl_set_timeout ()
+sets the expiration timer on a key to
+.I timeout
+seconds into the future.  Setting
+.I timeout
+to
+.B zero
+cancels the expiration, assuming the key hasn't already expired.
 .P
-The keyring must have
-.B link
-permission available to the calling process, the parent process must have the
-same UIDs/GIDs as the calling process, and the LSM must not reject the
-replacement.  Furthermore, this may not be used to affect init or a kernel
-thread.
+When the key expires, further attempts to access it will be met with error
+.BR EKEYEXPIRED .
 .P
-Note that the replacement will not take immediate effect upon the parent
-process, but will rather be deferred to the next time it returns to userspace
-from kernel space.
+The caller must have
+.B setattr
+permission on a key to be able change its permissions mask.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_session_to_parent ()
-returns 0.  On error, the value
+.BR keyctl_set_timeout ()
+returns
+.B 0 .
+On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH ERRORS
 .TP
-.B ENOMEM
-Insufficient memory to create a key.
+.B ENOKEY
+The specified key does not exist.
 .TP
-.B EPERM
-The credentials of the parent don't match those of the caller.
+.B EKEYEXPIRED
+The specified key has already expired.
+.TP
+.B EKEYREVOKED
+The specified key has been revoked.
 .TP
 .B EACCES
-The named keyring exists, but is not
-.B linkable
-by the calling process.
+The named key exists, but does not grant
+.B setattr
+permission to the calling process.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -72,4 +78,6 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR keyutils (7),
+.br
+.BR keyrings (7)
