--- a/man/keyctl_update.3
+++ b/man/keyctl_update.3
@@ -7,59 +7,73 @@
 .\" as published by the Free Software Foundation; either version
 .\" 2 of the License, or (at your option) any later version.
 .\"
-.TH KEYCTL_JOIN_SESSION_KEYRING 3 "4 May 2006" Linux "Linux Key Management Calls"
+.TH KEYCTL_UPDATE 3 "4 May 2006" Linux "Linux Key Management Calls"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH NAME
-keyctl_join_session_keyring \- Join a different session keyring
+keyctl_update \- Update a key
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH SYNOPSIS
 .nf
 .B #include <keyutils.h>
 .sp
-.BI "key_serial_t keyctl_join_session_keyring(const char *" name ");"
+.BI "long keyctl_update(key_serial_t " key ", const void *" payload ,
+.BI "size_t " plen ");"
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-.BR keyctl_join_session_keyring ()
-changes the session keyring to which a process is subscribed.
+.BR keyctl_update ()
+updates the payload of a key if the key type permits it.
 .P
-If
-.I name
-is
-.B NULL
-then a new anonymous keyring will be created, and the process will be
-subscribed to that.
+The caller must have
+.B write
+permission on a key to be able update it.
 .P
-If
-.I name
-points to a string, then if a keyring of that name is available, the process
-will attempt to subscribe to that keyring, giving an error if that is not
-permitted; otherwise a new keyring of that name is created and attached as the
-session keyring.
-.P
-To attach to an extant named keyring, the keyring must have
-.B search
-permission available to the calling process.
+.I payload
+and
+.I plen
+specify the data for the new payload.
+.I payload
+may be NULL and
+.I plen
+may be zero if the key type permits that.  The key type may reject the data if
+it's in the wrong format or in some other way invalid.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH RETURN VALUE
 On success
-.BR keyctl_join_session_keyring ()
-returns the serial number of the key it found or created.  On error, the value
+.BR keyctl_update ()
+returns
+.BR 0 .
+On error, the value
 .B -1
 will be returned and errno will have been set to an appropriate error.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH ERRORS
 .TP
+.B ENOKEY
+The key specified is invalid.
+.TP
+.B EKEYEXPIRED
+The key specified has expired.
+.TP
+.B EKEYREVOKED
+The key specified had been revoked.
+.TP
+.B EINVAL
+The payload data was invalid.
+.TP
 .B ENOMEM
-Insufficient memory to create a key.
+Insufficient memory to store the new payload.
 .TP
 .B EDQUOT
-The key quota for this user would be exceeded by creating this key or linking
-it to the keyring.
+The key quota for this user would be exceeded by increasing the size of the
+key to accommodate the new payload.
 .TP
 .B EACCES
-The named keyring exists, but is not
-.B searchable
+The key exists, but is not
+.B writable
 by the calling process.
+.TP
+.B EOPNOTSUPP
+The key type does not support the update operation on its keys.
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH LINKING
 This is a library function that can be found in
@@ -79,4 +93,6 @@ should be specified to the linker.
 .br
 .BR keyctl (3),
 .br
-.BR request-key (8)
+.BR keyutils (7),
+.br
+.BR keyrings (7)
