--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+keyutils (1.5.9-2) unstable; urgency=low
+
+  * debian/rules:
+    - Skip build-time tests requiring installed version. Fixes FTBFS on all
+      architectures.
+  * debian/patches (added):
+    - 0013-Enable-skipping-test-requiring-installation
+    Allow skipping of tests requiring an installation. The request2 and
+    prequest2 require the /sbin/request-key helper, but the kernel looks for
+    this in the real root (outside of any chroot).
+
+ -- Christian Kastner <debian@kvr.at>  Mon, 26 May 2014 23:35:04 +0200
+
 keyutils (1.5.9-1) unstable; urgency=low
 
   * New upstream release. Closes: #741336
