--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+keyutils (1.5.9-3) unstable; urgency=low
+
+  * debian/patches (updated):
+    - 0011-Disable-some-tests
+      Do not completely disable tests requiring big_key support (see below)
+  * debian/patches (added):
+    - Add patch 0014-Conditionalize-tests-based-on-kernel-version
+      Check the kernel version before running some tests to make sure that the
+      currently running kernel supports the features they require, thereby
+      avoiding a FTBFS on buildds with older kernels. Closes: #749657
+    - Add patch 0015-Insert-delay-in-key-invalidation-test
+      Cherry-picked from upstream
+
+ -- Christian Kastner <debian@kvr.at>  Thu, 29 May 2014 14:16:33 +0200
+
 keyutils (1.5.9-2) unstable; urgency=low
 
   * debian/rules:
