--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+keyutils (1.5.9-4) unstable; urgency=low
+
+  * debian/rules:
+    - On mips, mipsel, and sparc, add a build flag disabling tests for maximum
+      description length. These tests appear to be too strict. Fixes a FTBFS on
+      this platforms. Closes: #749657
+  * debian/patches (added):
+    - 0016-Disable-maxdesclen-tests-on-mipsel-sparc
+      On some platforms, the maximum description length seems to be longer than
+      assumed by the tests (verified manually), so we add a build flag that
+      allows us to disable those tests.
+
+ -- Christian Kastner <debian@kvr.at>  Wed, 04 Jun 2014 10:32:14 +0200
+
 keyutils (1.5.9-3) unstable; urgency=low
 
   * debian/patches (updated):
