Prepare changelog for release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,43 @@
+keyutils (1.5.9-6) unstable; urgency=medium
+
+  * Add package-specific d/gbp.conf
+  * d/patches:
+    - Drop patch numbers from .patch filenames
+  * d/control:
+    - Bump Standards-Version to 3.9.6 (no changes needed)
+    - Mark package keyutils-dbg as Multi-Arch: same
+    - Mark package keyutils-dev as Multi-Arch: same
+    - Mark package keyutils as Multi-Arch: foreign
+    - Drop XS-Testsuite. dpkg now recognizes the Testsuite header, and
+      dpkg-source automatically adds one when an autopkgtest suite is found
+    - Switch Maintainer email to my @debian.org address
+  * d/copyright:
+    - Fix a Files pattern (the GPL-2+ applies to all but two files)
+    - Bump copyright years
+  * d/patches (dropped):
+    - Enable-skipping-of-MAXDESCLEN-tests
+      This was a Debian-specific temporary workaround for a kernel issue on
+      arm64, MIPS, and sparc.
+        + The arm64 issue (#754206) is no longer reproducible on a porter box
+          which also has a 3.16 (albeit a later release), so lets see if these
+          just were early arm64 adoption problems
+        + The patch added below addresses the problem on MIPS more cleanly
+        + sparc has been dropped in the meantime
+  * d/patches (updated):
+     - Enable-skipping-test-requiring-installation.patch
+     - enable-skipping-tests-req-root.patch
+     - man-page-syntax-fixes.patch
+       Added DEP3 Applied-Upstream headers to the above three
+  * d/patches (added):
+    - Disable-tests-hitting-bug-in-MIPS-kernel-3.19.patch
+      This disables the "overlong description length" tests when running on a
+      MIPS kernel earlier than 3.19. They could not pass because of a kernel
+      bug. Closes: #779351
+    - Add patch Make-testcase-aware-of-a-kernel-behaviour-change.patch
+      This was a transient issue with kernels 3.8 - 3.12. Closes: #768905
+
+ -- Christian Kastner <ckk@debian.org>  Tue, 01 Sep 2015 21:17:27 +0200
+
 keyutils (1.5.9-5) unstable; urgency=low
 
   * debian/rules:
