--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+keyutils (1.5.9-7) unstable; urgency=medium
+
+  * debian/patches (updated):
+    - Disable-tests-hitting-bug-in-MIPS-kernel-3.19.patch
+      Add another affected test that I seem to have overlooked previously.
+
+ -- Christian Kastner <ckk@debian.org>  Thu, 03 Sep 2015 01:55:10 +0200
+
 keyutils (1.5.9-6) unstable; urgency=medium
 
   * Add package-specific d/gbp.conf
