--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+keyutils (1.5.9-8) unstable; urgency=medium
+
+  * d/rules:
+    - Use date from changelog as build date
+  * d/patches (added):
+    - Add patch Include-limits.h-for-UINT_MAX.patch
+      Closes: #798157
+    - Add patch Make-build-reproducible.patch
+      Makes it possible to set build date instead of using the current date
+  * d/patches (updated):
+    - Disable-tests-hitting-bug-in-MIPS-kernel-3.19.patch
+    - Make-testcase-aware-of-a-kernel-behaviour-change.patch
+      Extend DEP3 headers
+
+ -- Christian Kastner <ckk@debian.org>  Wed, 07 Oct 2015 20:42:53 +0200
+
 keyutils (1.5.9-7) unstable; urgency=medium
 
   * debian/patches (updated):
