--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+keyutils (1.5.9-9) unstable; urgency=medium
+
+  * Drop package keyutils-dbg in favor of automatic dbgsym packages, as per
+    https://lists.debian.org/debian-devel/2015/12/msg00262.html
+  * d/control:
+    - Bump Standards-Version to 3.9.8 (no changes needed)
+    - Bump Build-Depends version of debhelper to (>= 9.20151004). Needed for
+      $SOURCE_DATE_EPOCH
+    - Switch Vcs-Browser from gitweb to cgit
+    - Switch to secure URIs in Vcs-* fields
+  * d/copyright:
+    - Bump copyright years
+  * d/tests:
+    - Amend missing dependencies for upstream-runtime-tests
+    - Add allow-stderr restriction
+  * d/rules:
+    - Use debhelper's $SOURCE_DATE_EPOCH for embedded timestamp. This should
+      resolve a reproducible-builds issue
+  * d/patches (added):
+    - Drop-tests-requiring-CONFIG_BIG_KEYS.patch
+      The Debian kernel is built without CONFIG_BIG_KEYS
+    - Add Adjust-tests-for-3.18-kernel-change.patch
+      The maximum description size is 4095 plus a NULL in kernels from v3.18.
+      Backported from upstream
+
+ -- Christian Kastner <ckk@debian.org>  Sun, 01 May 2016 13:08:32 +0200
+
 keyutils (1.5.9-8) unstable; urgency=medium
 
   * d/rules:
