--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keyutils (1.5.9-10) UNRELEASED; urgency=medium
+
+  * d/tests: Use AUTOPKGTEST_TMP instead of ADTTMP
+
+ -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 09:39:00 +0200
+
 keyutils (1.5.9-9.3) unstable; urgency=medium
 
   * Non-maintainer upload.
