--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+keyutils (1.6.1-1) unstable; urgency=medium
+
+  * New upstream release.
+    - Refresh patches
+  * Bump Standards-Version to 4.5.0 (no changes needed)
+
+ -- Christian Kastner <ckk@debian.org>  Sun, 09 Feb 2020 21:15:07 +0100
+
 keyutils (1.6-6) unstable; urgency=medium
 
   * d/tests:
