--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+keyutils (1.6.1-2) unstable; urgency=medium
+
+  * Update symbols file (3 symbols added)
+  * Add Tests-for-KEYCTL_MOVE-require-kernel-5.3-or-above.patch.
+    Resolves a FTBFS on build hosts with a kernel before 5.2
+
+ -- Christian Kastner <ckk@debian.org>  Mon, 10 Feb 2020 17:23:36 +0100
+
 keyutils (1.6.1-1) unstable; urgency=medium
 
   * New upstream release.
